# crazy-pumpkin-os

./: .gitignore  =13.0  AGENT_ONBOARDING.md  API_DOCS.md  ARCHITECTURE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  FIRST_CONTRIBUTION.md  GETTING_STARTED.md  LICENSE  LICENSE.md  PLUGIN_GUIDE.md  PROMPTS_BUG_FIX.md  PROMPTS_DOCUMENTATION.md  PROMPTS_FIRST_CONTRIBUTION.md  PROMPTS_PLUGIN_DEVELOPMENT.md  README.md  ROADMAP.md  SECURITY.md  audit_registry_id_d136d1fce88b.md  investigation_d136d1fce88b.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
docs/: API_DOCS.md  CICD.md  CONFIG_VALIDATION.md  PLUGIN_DISCOVERY_AND_MANAGEMENT.md  PLUGIN_ENTRYPOINTS.md  QUICKSTART.md  TUTORIAL_CONFIG.md  TUTORIAL_PLUGIN_ENTRYPOINTS.md  api-reference.md  ci-cd-guide.md  cli-reference.md  cost-observability.md  dashboard-monitoring.md  index.md  notifications.md  plugin-guide.md  spec-developer-agent-tool-loop.md  store-testing.md
examples/: README_default_json.md  config.yaml  custom_provider.py  dashboard-demo.py  default.json
scripts/: build_dist.sh  ci_check.sh  demo_config_validation.py  release.sh
specs/: langfuse-tracer-span-shutdown.md  litellm-langfuse-tracer-integration.md
tests/: conftest.py  test_agent_budget_integration.py  test_agent_run_logging.py  test_agent_session.py  test_agent_sessions.py  test_agent_status_events.py  test_agents.py  test_agents_code_writer.py  test_agents_health.py  test_agents_reviewer.py  test_agents_strategy.py  test_budget.py  test_budget_alerts.py  test_budget_enforcer.py  test_claude_sdk_agent.py  test_claude_sdk_session.py  test_cli.py  test_cli_budget.py  test_cli_budget_status.py  test_cli_cost.py  test_cli_dashboard.py  test_cli_doctor.py  test_cli_init.py  test_cli_install.py  test_cli_logs.py  test_cli_plugin.py  test_cli_plugins.py  test_cli_products.py  test_cli_run.py  test_cli_schedule.py  test_cli_scheduler_jobs.py  test_cli_session.py  test_cli_sessions.py  test_cli_smoke.py  test_cli_status.py  test_cli_trigger_research.py  test_cli_wizard.py  test_config.py  test_config_env_override.py  (+74 more)
(+82 files in other folders)
